--- a/pathgen/src/App.css
+++ b/pathgen/src/App.css
@@ -1,3 +1,17 @@
-*{
-  background-image: 'background.jpeg' , 'cover';
+/* App.css */
+
+.background-video-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.background-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
