--- a/pathgen/src/components/Home.css
+++ b/pathgen/src/components/Home.css
@@ -1,6 +1,7 @@
 /* src/components/HomePage.css */ 
 
-.home-container { 
+.home-container {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,7 +9,23 @@
     height: 100vh;
     text-align: center;
     font-family: 'Arial', sans-serif;
-    background-color: #f9f9f9; /* Adjust as needed */
+    overflow: hidden; /* Prevent scrollbars if video overflows */
+}
+
+.background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the video covers the area */
+    z-index: -1; /* Places the video behind the content */
+}
+
+.content {
+    position: relative;
+    z-index: 1; /* Ensures the content is above the video */
+    color: #fff; /* Adjust text color to contrast with the video */
 }
 
 .logo img {
@@ -19,14 +36,15 @@
 
 .headline {
     font-size: 2.5rem;
-    font-weight: bold;
+    font-weight: bolder;
     margin-bottom: 10px;
-    color: #333;
+    color: #090909;
 }
 
 .subtitle {
-    font-size: 1rem;
-    color: #666;
+    font-size: 1rem; 
+    font-weight: bold;
+    color: #060606;
     margin-bottom: 20px;
 }
 
